<resources>
    <string name="app_name">PlaneDemo</string>
    <string name="login_user">用户名</string>
    <string name="login_psd">密码</string>
    <string name="login_forget_psd">忘记密码</string>
    <string name="login_in">登录</string>
    <string name="login_register">注册</string>
    <string name="login_loading">正在登录</string>
    <string name="login_rule">点击登录按钮，即代表你同意用户协议和隐私条款</string>
</resources>
